<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainVertLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:visibility="visible"
        tools:text="Welcome Back"
        tools:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="26dp" />

    <TextView
        android:id="@+id/usernameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingEnd="0dp"
        android:text="@string/username_text" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="385dp"
        android:layout_height="58dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="42dp" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="2dp"
        android:paddingEnd="0dp"
        android:text="@string/password_text" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="388dp"
        android:layout_height="58dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/enterLoginButton"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/enter_login_info" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="29dp" />

        <Button
            android:id="@+id/newUserButton"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/new_user" />

    </LinearLayout>

</LinearLayout>